# messenger-pigeon

./: .gitignore  .pre-commit.config.yml  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pipeline.yml
docs/: HOWTO.md
messenger/: send_email.py  utils.py
templates/: simple_email.html
