[metadata]
name = liber-messaging
version = attr: messenger.__version__
author = Marcelo Leivas
author_email = marcelo.lleivas@gmail.com

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = True
packages = find:
python_requires = >=3.10

[settings]
known_third_party = jinja2,setuptools
